[project]
name = "sdk-examples"
version = "0.0.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuel-merkle = { version = "0.49.0" }
sha2 = { version = "0.10" }
fuels = { version = "0.62.0", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "sdk-examples"
path = "harness.rs"
