[project]
name = "sway-libs-tests"
version = "0.0.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuel-merkle = { version = "0.33.0" }
fuels = { version = "0.53.0", features = ["fuel-core-lib"] }
sha2 = { version = "0.10" }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "sway-libs-tests"
path = "src/harness.rs"
