[project]
name = "sway-libs-tests"
version = "0.0.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuel-merkle = { version = "0.56.0" }
fuels = { version = "0.66.2" }
sha2 = { version = "0.10" }
tokio = { version = "1.12", features = ["rt", "macros"] }
rand = { version = "0.8.5", default-features = false, features = [
    "std_rng",
    "getrandom",
] }
fuel-tx = { version = "0.56.0" }

[[test]]
harness = true
name = "sway-libs-tests"
path = "src/harness.rs"
