[project]
name = "sway-libs-tests"
version = "0.0.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
forc = { version = "0.25.2" }
fuel-core = { version = "0.10.1 "}
fuel-merkle = { version = "0.3" }
fuels = { version = "0.25.1", features = ["fuel-core-lib"] }
sha2 = { version = "0.10" }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "sway-libs-tests"
path = "test_projects/harness.rs"
